logs/error.log
src/Main.java:10: error: statements not expected outside of methods and initializers
        while (true) {
        ^
src/Main.java:145: error: class, interface, annotation type, enum, record, method or field expected
}
^
2 errors
---- Wed Dec 31 10:31:05 AM IST 2025 : Compilation error ----
---- Wed Dec 31 10:32:46 AM IST 2025 : Runtime error ----
---- Wed Dec 31 10:38:24 AM IST 2025 : Runtime error ----
